--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <nav>
     <ul>
-      <li><a onclick="changeLocation('vancouver')">Vancouver</a></li>
-      <li><a onclick="changeLocation('burnaby')">Burnaby</a></li>
-      <li><a onclick="changeLocation('richmond')">Richmond</a></li>
-      <li><a onclick="changeLocation('coquitlam')">Coquitlam</a></li>
-      <li><a onclick="changeLocation('surrey')">Surrey</a></li>
+      <li><a href='' onclick="changeLocation('vancouver')">Vancouver</a></li>
+      <li><a href='' onclick="changeLocation('burnaby')">Burnaby</a></li>
+      <li><a href='' onclick="changeLocation('richmond')">Richmond</a></li>
+      <li><a href=' 'onclick="changeLocation('coquitlam')">Coquitlam</a></li>
+      <li><a href='' onclick="changeLocation('surrey')">Surrey</a></li>
     </ul>
   </nav>
 
