--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Weather App</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a onclick="changeLocation('vancouver')">Vancouver</a></li>
-      <li><a onclick="changeLocation('burnaby')">Burnaby</a></li>
-      <li><a onclick="changeLocation('richmond')">Richmond</a></li>
-      <li><a onclick="changeLocation('coquitlam')">Coquitlam</a></li>
-      <li><a onclick="changeLocation('surrey')">Surrey</a></li>
-    </ul>
-  </nav>
-
-  <div class="weather-container">
-    <h1 id="location"></h1>
-    <img src="" alt="Weather Icon">
-    <div id="conditions"></div>
-    <div id="temp"></div>
-  </div>
-</body>
+  <head>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>Simple Weather App</h1>
+      <nav>
+        <ul>
+          <li><a onclick="changeLocation(vancouver)">Vancouver</a></li>
+          <li><a onclick="changeLocation(vancouver)">Burnaby</a></li>
+          <li><a onclick="changeLocation(richmond)">Richmond</a></li>
+          <li><a onclick="changeLocation(coquitlam)">Coquitlam</a></li>
+          <li><a onclick="changeLocation(surrey)">Surrey</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="weather-container">
+      <h1 id="location"></h1>
+      <img src="" />
+      <div id="conditions"></div>
+      <div id="temp"></div>
+    </div>
+  </body>
 </html>
