--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <header>
+      <header>
       <h1>Simple Weather App</h1>
       <nav>
         <ul>
-          <li><a onclick="changeLocation(vancouver)">Vancouver</a></li>
-          <li><a onclick="changeLocation(vancouver)">Burnaby</a></li>
-          <li><a onclick="changeLocation(richmond)">Richmond</a></li>
-          <li><a onclick="changeLocation(coquitlam)">Coquitlam</a></li>
-          <li><a onclick="changeLocation(surrey)">Surrey</a></li>
+          <li><a onclick="changeLocation('vancouver vancouver')">Vancouver</a></li>
+          <li><a onclick="changeLocation('vancouver burnaby')">Burnaby</a></li>
+          <li><a onclick="changeLocation('vancouver Richmond')">Richmond</a></li>
+          <li><a onclick="changeLocation('vancouver coquitlam')">Coquitlam</a></li>
+          <li><a onclick="changeLocation('vancouver surrey')">Surrey</a></li>
         </ul>
       </nav>
     </header>
+    
     <div class="weather-container">
       <h1 id="location"></h1>
-      <img src="" />
-      <div id="conditions"></div>
-      <div id="temp"></div>
+      <p id="curr-temp"></p>
+      <p id="temp"></p>
+      <p id="conditions"></p>
+      
     </div>
+
   </body>
 </html>
