--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
       <header>
